[MSA-81] REFACTOR : resolve High & blocker (#7)
* refactor : Make non-static "attributes" transient or serializable.

* refactor : Pattern Matching for "instanceof" operator should be used instead of simple "instanceof" + cast

* refactor : Null is returned but a "Boolean" is expected.

* refactor : remove unused variable

* refactor : remove unused variable

* refactor : remove unused variable

* refactor : "Stream.toList()" method should be used instead of "collectors" when unmodifiable list needed

* refactor : 'fields()' is deprecated Remove

* refactor : Cognitive Complexity of methods should not be too high

* refactor :reduce cognitive complexity of methods toDetailDto

* refactor :reduce cognitive complexity of methods createBooking

* refactor : "Stream.toList()" method should be used instead of "collectors" when unmodifiable list needed

* refactor : remove always true condition

* refactor : remove unused import

* refactor : reduce cognitive complexity method of ScheduleSeatInitializationService