@@ -21,6 +21,7 @@ import org.ddcn41.ticketing_system.common.dto.booking.GetBookings200ResponseDto;
 import org.ddcn41.ticketing_system.common.dto.queue.TokenVerifyRequest;
 import org.ddcn41.ticketing_system.common.exception.BusinessException;
 import org.ddcn41.ticketing_system.common.exception.ErrorCode;
+import org.ddcn41.ticketing_system.performance.entity.Performance;
 import org.ddcn41.ticketing_system.performance.entity.PerformanceSchedule;
 import org.ddcn41.ticketing_system.performance.repository.PerformanceScheduleRepository;
 import org.ddcn41.ticketing_system.seat.entity.ScheduleSeat;
@@ -28,20 +29,21 @@ import org.ddcn41.ticketing_system.seat.repository.ScheduleSeatRepository;
 import org.ddcn41.ticketing_system.seat.service.SeatService;
 import org.ddcn41.ticketing_system.user.entity.User;
 import org.ddcn41.ticketing_system.user.repository.UserRepository;
+import org.ddcn41.ticketing_system.venue.entity.Venue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.orm.ObjectOptimisticLockingFailureException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
+import java.util.function.Function;
 
 @Service
 @RequiredArgsConstructor
@@ -59,90 +61,123 @@ public class BookingService {
     private final QueueClient queueClient;
     private final UserRepository userRepository;
 
+
     @Transactional(rollbackFor = Exception.class)
     public CreateBookingResponseDto createBooking(String userId, CreateBookingRequestDto req) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+        // 유저 + 스케줄 조회
+        User user = findUser(userId);
+        PerformanceSchedule schedule = findSchedule(req.getScheduleId());
 
-        PerformanceSchedule schedule = scheduleRepository.findById(req.getScheduleId())
-                .orElseThrow(() -> new BusinessException(ErrorCode.SCHEDULE_NOT_FOUND));
-
-        // 대기열 토큰 검증 추가 (기존 seat_map_json 로직 이전에)
+        // 대기열 토큰 검증 todo: 임시 정지 상태
         validateQueueTokenIfRequired(req, user, schedule);
 
-
-        // seat_map_json 파싱 (검증/가격)
-        ObjectMapper om = new ObjectMapper();
-        JsonNode root;
-        try {
-            String seatMapJson = schedule.getPerformance().getVenue().getSeatMapJson();
-            root = om.readTree(seatMapJson == null ? "{}" : seatMapJson);
-        } catch (Exception e) {
-            throw new BusinessException(ErrorCode.INVALID_SEAT_MAP);
-        }
-
+        // 좌석 매핑 및 검증
+        JsonNode root = parseSeatMap(schedule);
         JsonNode sections = root.path("sections");
         JsonNode pricingNode = root.path("pricing");
 
-        // 좌석 선택을 실제 ScheduleSeat로 매핑 및 검증
-        List<ScheduleSeat> requestedSeats = req.getSeats().stream().map(sel -> {
-            String grade = safeUpper(sel.getGrade());
-            String zone = safeUpper(sel.getZone());
-            String rowLabel = safeUpper(sel.getRowLabel());
-            String colNum = sel.getColNum();
+        List<ScheduleSeat> requestedSeats = mapAndValidateSeats(req, schedule, sections, pricingNode);
 
-            boolean validByJson = validateBySeatMap(sections, grade, zone, rowLabel, colNum);
-            if (!validByJson) {
-                throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE, String.format("유효하지 않은 좌석 지정: %s/%s-%s%s", grade, zone, rowLabel, colNum));
-            }
+        // 좌석 락킹 및 가용 좌석 감소
+        lockSeatsAndUpdateAvailability(requestedSeats, schedule);
 
-            ScheduleSeat seat = scheduleSeatRepository.findBySchedule_ScheduleIdAndZoneAndRowLabelAndColNum(
-                    schedule.getScheduleId(), zone, rowLabel, colNum);
-            if (seat == null) {
-                throw new BusinessException(ErrorCode.SEAT_NOT_FOUND, String.format("존재하지 않는 좌석: %s/%s-%s%s", grade, zone, rowLabel, colNum));
-            }
-            if (!safeUpper(seat.getGrade()).equals(grade) || !safeUpper(seat.getZone()).equals(zone)) {
-                throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE, "좌석의 등급/구역 정보가 요청과 일치하지 않습니다");
-            }
-            BigDecimal price = priceByGrade(pricingNode, grade);
-            if (price != null) {
-                seat.setPrice(price);
-            }
-            if (seat.getStatus() != ScheduleSeat.SeatStatus.AVAILABLE) {
-                throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE, "예약 불가능한 좌석이 포함되어 있습니다: " + seat.getSeatId());
-            }
-            seat.setStatus(ScheduleSeat.SeatStatus.LOCKED);
-            return seat;
-        }).toList();
+        // 예매 엔티티 생성
+        Booking booking = createBookingEntity(user, schedule, requestedSeats);
 
-        // 낙관적 락 검증을 커밋 전에 강제 수행 (flush 시 버전 충돌 발생 가능)
-        // NOTE: 커밋 시 자동 flush로도 충분하면 이 flush는 생략 가능
+        // 대기열 토큰 사용
+        processQueueToken(req, user);
+
+        // BookingSeat 생성
+        List<BookingSeat> savedSeats = saveBookingSeats(booking, requestedSeats);
+        booking.setBookingSeats(savedSeats);
+
+        // 좌석 상태 BOOKED로 전환
+        updateSeatStatusToBooked(requestedSeats);
+
+        // 감사 로그 기록
+        bookingAuditService.logBookingCreated(user, booking,
+                requestedSeats.stream().map(ScheduleSeat::getSeatId).toList());
+
+        return toCreateResponse(booking);
+    }
+
+    private User findUser(String userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private PerformanceSchedule findSchedule(Long scheduleId) {
+        return scheduleRepository.findById(scheduleId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.SCHEDULE_NOT_FOUND));
+    }
+
+    private JsonNode parseSeatMap(PerformanceSchedule schedule) {
         try {
-            scheduleSeatRepository.saveAll(requestedSeats);
+            ObjectMapper om = new ObjectMapper();
+            String seatMapJson = schedule.getPerformance().getVenue().getSeatMapJson();
+            return om.readTree(seatMapJson == null ? "{}" : seatMapJson);
+        } catch (Exception e) {
+            throw new BusinessException(ErrorCode.INVALID_SEAT_MAP);
+        }
+    }
+    private List<ScheduleSeat> mapAndValidateSeats(CreateBookingRequestDto req,
+                                                   PerformanceSchedule schedule,
+                                                   JsonNode sections,
+                                                   JsonNode pricingNode) {
+        return req.getSeats().stream()
+                .map(sel -> {
+                    String grade = safeUpper(sel.getGrade());
+                    String zone = safeUpper(sel.getZone());
+                    String rowLabel = safeUpper(sel.getRowLabel());
+                    String colNum = sel.getColNum();
+
+                    if (!validateBySeatMap(sections, grade, zone, rowLabel, colNum)) {
+                        throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE,
+                                String.format("유효하지 않은 좌석: %s/%s-%s%s", grade, zone, rowLabel, colNum));
+                    }
+
+                    ScheduleSeat seat = scheduleSeatRepository.findBySchedule_ScheduleIdAndZoneAndRowLabelAndColNum(
+                            schedule.getScheduleId(), zone, rowLabel, colNum);
+                    if (seat == null) throw new BusinessException(ErrorCode.SEAT_NOT_FOUND);
+                    if (!safeUpper(seat.getGrade()).equals(grade)
+                            || !safeUpper(seat.getZone()).equals(zone)) {
+                        throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE);
+                    }
+
+                    BigDecimal price = priceByGrade(pricingNode, grade);
+                    if (price != null) seat.setPrice(price);
+                    if (seat.getStatus() != ScheduleSeat.SeatStatus.AVAILABLE) {
+                        throw new BusinessException(ErrorCode.SEAT_NOT_AVAILABLE);
+                    }
+
+                    seat.setStatus(ScheduleSeat.SeatStatus.LOCKED);
+                    return seat;
+                })
+                .toList();
+    }
+
+    private void lockSeatsAndUpdateAvailability(List<ScheduleSeat> seats, PerformanceSchedule schedule) {
+        try {
+            scheduleSeatRepository.saveAll(seats);
             scheduleSeatRepository.flush();
-            // 좌석을 AVAILABLE -> LOCKED로 변경한 수만큼 가용 좌석 카운터 감소
-            if (!requestedSeats.isEmpty()) {
-                int affected = scheduleRepository.decrementAvailableSeats(req.getScheduleId(), requestedSeats.size());
-                if (affected == 0) {
-                    throw new BusinessException(ErrorCode.INSUFFICIENT_SEATS);
-                }
-                scheduleRepository.refreshScheduleStatus(req.getScheduleId());
+
+            if (!seats.isEmpty()) {
+                int affected = scheduleRepository.decrementAvailableSeats(schedule.getScheduleId(), seats.size());
+                if (affected == 0) throw new BusinessException(ErrorCode.INSUFFICIENT_SEATS);
+                scheduleRepository.refreshScheduleStatus(schedule.getScheduleId());
             }
-        } catch (org.springframework.orm.ObjectOptimisticLockingFailureException e) {
+        } catch (ObjectOptimisticLockingFailureException e) {
             throw new BusinessException(ErrorCode.SEAT_ALREADY_BOOKED);
         }
+    }
 
-        // 이미 검증된 requestedSeats 사용 (중복 조회 방지)
-        List<ScheduleSeat> seats = requestedSeats;
-
+    private Booking createBookingEntity(User user, PerformanceSchedule schedule, List<ScheduleSeat> seats) {
         BigDecimal total = seats.stream()
                 .map(ScheduleSeat::getPrice)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        String bookingNumber = "DDCN-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
-
         Booking booking = Booking.builder()
-                .bookingNumber(bookingNumber)
+                .bookingNumber("DDCN-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase())
                 .userId(user.getUserId())
                 .schedule(schedule)
                 .seatCount(seats.size())
@@ -150,41 +185,36 @@ public class BookingService {
                 .status(BookingStatus.CONFIRMED)
                 .build();
 
-        Booking saved = bookingRepository.save(booking);
+        return bookingRepository.save(booking);
+    }
 
-        // 예매 완료 시 토큰 사용 - 호출
-        if (req.getQueueToken() != null && !req.getQueueToken().trim().isEmpty()) {
-            try {
-                queueClient.useToken(req.getQueueToken());
-                log.info("토큰 사용 완료 - 사용자: {}, 토큰: {}", user.getUsername(), req.getQueueToken());
-            } catch (Exception e) {
-                log.warn("토큰 사용 처리 중 오류 발생: {}", e.getMessage());
-                // 예매는 완료되었으므로 로그만 남기고 계속 진행
-            }
+    private void processQueueToken(CreateBookingRequestDto req, User user) {
+        if (req.getQueueToken() == null || req.getQueueToken().trim().isEmpty()) return;
+
+        try {
+            queueClient.useToken(req.getQueueToken());
+            log.info("토큰 사용 완료 - 사용자: {}, 토큰: {}", user.getUsername(), req.getQueueToken());
+        } catch (Exception e) {
+            log.warn("토큰 사용 처리 중 오류 발생: {}", e.getMessage());
         }
+    }
 
-
-        // 예약 좌석 정보 생성 (좌석 상태 변경은 하지 않음)
-        List<BookingSeat> savedSeats = seats.stream()
+    private List<BookingSeat> saveBookingSeats(Booking booking, List<ScheduleSeat> seats) {
+        return seats.stream()
                 .map(seat -> BookingSeat.builder()
-                        .booking(saved)
+                        .booking(booking)
                         .seat(seat)
                         .seatPrice(seat.getPrice())
                         .build())
                 .map(bookingSeatRepository::save)
                 .toList();
+    }
 
-        saved.setBookingSeats(savedSeats);
-
-        // 좌석을 최종 예약 상태로 전환 (이미 LOCKED 상태까지 검증 및 카운터 반영 완료)
+    private void updateSeatStatusToBooked(List<ScheduleSeat> seats) {
         seats.forEach(seat -> seat.setStatus(ScheduleSeat.SeatStatus.BOOKED));
         scheduleSeatRepository.saveAll(seats);
-
-        List<Long> seatIds = seats.stream().map(ScheduleSeat::getSeatId).toList();
-        bookingAuditService.logBookingCreated(user, saved, seatIds);
-
-        return toCreateResponse(saved);
     }
+
 
     /**
      * 대기열 토큰 검증 - 호출
@@ -203,10 +233,10 @@ public class BookingService {
                         .performanceId(schedule.getPerformance().getPerformanceId())
                         .build();
 
-                // 임시 테스트를 위해 검증 진행 X
+                 //임시 테스트를 위해 검증 진행 X
 //                ApiResponse<TokenVerifyResponse> response =
 //                        queueClient.verifyToken(req.getQueueToken(), verifyRequest);
-
+//
 //                if (response.getData() == null || !response.getData().isValid()) {
 //                    throw new BusinessException(ErrorCode.QUEUE_TOKEN_INVALID,
 //                            response.getData() != null ? response.getData().getReason() : "");
@@ -486,7 +516,7 @@ public class BookingService {
                 .showDate(b.getSchedule() != null ? odt(b.getSchedule().getShowDatetime()) : null)
                 .seatCount(b.getSeatCount())
                 .totalAmount(b.getTotalAmount() == null ? 0.0 : b.getTotalAmount().doubleValue())
-                .seats(b.getBookingSeats() == null ? List.of() : b.getBookingSeats().stream().map(this::toSeatDto).collect(Collectors.toList()))
+                .seats(b.getBookingSeats() == null ? List.of() : b.getBookingSeats().stream().map(this::toSeatDto).toList())
                 .status(b.getStatus() == null ? null : BookingDto.StatusEnum.valueOf(b.getStatus().name()))
                 .expiresAt(odt(b.getExpiresAt()))
                 .bookedAt(odt(b.getBookedAt()))
@@ -497,48 +527,81 @@ public class BookingService {
                 .build();
     }
 
-    private GetBookingDetail200ResponseDto toDetailDto(Booking b) {
-        User user = userRepository.findById(b.getUserId())
+    private GetBookingDetail200ResponseDto toDetailDto(Booking booking) {
+        User user = userRepository.findById(booking.getUserId())
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        // Get first seat info for display
-        String seatCode = null;
-        String seatZone = null;
-        if (b.getBookingSeats() != null && !b.getBookingSeats().isEmpty()) {
-            var scheduleSeat = b.getBookingSeats().get(0).getSeat();
-            if (scheduleSeat != null) {
-                String rowLabel = scheduleSeat.getRowLabel();
-                String colNum = scheduleSeat.getColNum();
-                if (rowLabel != null && colNum != null) {
-                    seatCode = rowLabel + colNum;
-                }
-                seatZone = scheduleSeat.getZone();
-            }
-        }
+        PerformanceSchedule schedule = booking.getSchedule();
+        Performance performance = schedule != null ? schedule.getPerformance() : null;
+        Venue venue = performance != null ? performance.getVenue() : null;
+
+        SeatInfo seatInfo = extractSeatInfo(booking);
+        List<BookingSeatDto> seatDtos = toSeatDtoList(booking);
 
         return GetBookingDetail200ResponseDto.builder()
-                .bookingId(b.getBookingId())
-                .bookingNumber(b.getBookingNumber())
-                .userId(user != null ? user.getUserId() : null)
-                .userName(user != null ? user.getName() : null)
-                .userPhone(user != null ? user.getPhone() : null)
-                .scheduleId(b.getSchedule() != null ? b.getSchedule().getScheduleId() : null)
-                .performanceTitle(b.getSchedule() != null && b.getSchedule().getPerformance() != null ? b.getSchedule().getPerformance().getTitle() : null)
-                .venueName(b.getSchedule() != null && b.getSchedule().getPerformance() != null && b.getSchedule().getPerformance().getVenue() != null ? b.getSchedule().getPerformance().getVenue().getVenueName() : null)
-                .showDate(b.getSchedule() != null ? odt(b.getSchedule().getShowDatetime()) : null)
-                .seatCode(seatCode)
-                .seatZone(seatZone)
-                .seatCount(b.getSeatCount())
-                .totalAmount(b.getTotalAmount() == null ? 0.0 : b.getTotalAmount().doubleValue())
-                .status(b.getStatus() == null ? null : GetBookingDetail200ResponseDto.StatusEnum.valueOf(b.getStatus().name()))
-                .expiresAt(odt(b.getExpiresAt()))
-                .bookedAt(odt(b.getBookedAt()))
-                .cancelledAt(odt(b.getCancelledAt()))
-                .cancellationReason(b.getCancellationReason())
-                .createdAt(odt(b.getCreatedAt()))
-                .updatedAt(odt(b.getUpdatedAt()))
-                .seats(b.getBookingSeats() == null ? List.of() : b.getBookingSeats().stream().map(this::toSeatDto).collect(Collectors.toList()))
+                .bookingId(booking.getBookingId())
+                .bookingNumber(booking.getBookingNumber())
+                .userId(user.getUserId())
+                .userName(user.getName())
+                .userPhone(user.getPhone())
+                .scheduleId(idOrNull(schedule))
+                .performanceTitle(textOrNull(performance, Performance::getTitle))
+                .venueName(textOrNull(venue, Venue::getVenueName))
+                .showDate(odtOrNull(schedule, PerformanceSchedule::getShowDatetime))
+                .seatCode(seatInfo.code())
+                .seatZone(seatInfo.zone())
+                .seatCount(booking.getSeatCount())
+                .totalAmount(booking.getTotalAmount() != null ? booking.getTotalAmount().doubleValue() : 0.0)
+                .status(statusOrNull(booking.getStatus()))
+                .expiresAt(odt(booking.getExpiresAt()))
+                .bookedAt(odt(booking.getBookedAt()))
+                .cancelledAt(odt(booking.getCancelledAt()))
+                .cancellationReason(booking.getCancellationReason())
+                .createdAt(odt(booking.getCreatedAt()))
+                .updatedAt(odt(booking.getUpdatedAt()))
+                .seats(seatDtos)
                 .build();
+    }
+    private record SeatInfo(String code, String zone) {}
+
+    private SeatInfo extractSeatInfo(Booking booking) {
+        if (booking.getBookingSeats() == null || booking.getBookingSeats().isEmpty()) {
+            return new SeatInfo(null, null);
+        }
+
+        var seat = booking.getBookingSeats().getFirst().getSeat();
+        if (seat == null) return new SeatInfo(null, null);
+
+        String code = (seat.getRowLabel() != null && seat.getColNum() != null)
+                ? seat.getRowLabel() + seat.getColNum()
+                : null;
+        return new SeatInfo(code, seat.getZone());
+    }
+
+    private List<BookingSeatDto> toSeatDtoList(Booking booking) {
+        if (booking.getBookingSeats() == null) return List.of();
+        return booking.getBookingSeats().stream()
+                .map(this::toSeatDto)
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private Long idOrNull(PerformanceSchedule schedule) {
+        return schedule != null ? schedule.getScheduleId() : null;
+    }
+
+    private <T> String textOrNull(T obj, Function<T, String> getter) {
+        return obj != null ? getter.apply(obj) : null;
+    }
+
+    private <T> OffsetDateTime odtOrNull(T obj, Function<T, LocalDateTime> getter) {
+        return obj != null ? odt(getter.apply(obj)) : null;
+    }
+
+    private GetBookingDetail200ResponseDto.StatusEnum statusOrNull(BookingStatus status) {
+        return status != null
+                ? GetBookingDetail200ResponseDto.StatusEnum.valueOf(status.name())
+                : null;
     }
 
     private OffsetDateTime odt(java.time.LocalDateTime ldt) {
@@ -560,44 +623,52 @@ public class BookingService {
         String normalizedZone = zone == null ? null : zone.trim().toUpperCase();
 
         for (JsonNode section : sections) {
-            int rows = section.path("rows").asInt(0);
-            int cols = section.path("cols").asInt(0);
-            if (rows <= 0 || cols <= 0) {
+            if (!isValidSection(section, normalizedGrade, normalizedZone)) {
                 continue;
             }
 
-            String sectionRowStart = safeUpper(textOrNull(section, "rowLabelFrom"));
-            if (sectionRowStart == null || sectionRowStart.isBlank()) {
-                continue;
-            }
-
-            String sectionGrade = safeUpper(textOrNull(section, "grade"));
-            String sectionZone = safeUpper(textOrNull(section, "zone"));
-
-            if (normalizedGrade != null && !normalizedGrade.isBlank() && !normalizedGrade.equals(sectionGrade)) {
-                continue;
-            }
-            if (normalizedZone != null && !normalizedZone.isBlank() && !normalizedZone.equals(sectionZone)) {
-                continue;
-            }
-
-            int seatStart = section.path("seatStart").asInt(1);
-
-            for (int r = 0; r < rows; r++) {
-                String currentRow = incrementAlpha(sectionRowStart, r);
-                if (!currentRow.equals(normalizedRow)) {
-                    continue;
-                }
-
-                for (int c = 0; c < cols; c++) {
-                    String currentCol = String.valueOf(seatStart + c);
-                    if (currentCol.equals(normalizedCol)) {
-                        return true;
-                    }
-                }
+            if (isSeatInSection(section, normalizedRow, normalizedCol)) {
+                return true;
             }
         }
 
+        return false;
+    }
+
+    private static boolean isValidSection(JsonNode section, String normalizedGrade, String normalizedZone) {
+        int rows = section.path("rows").asInt(0);
+        int cols = section.path("cols").asInt(0);
+        if (rows <= 0 || cols <= 0) return false;
+
+        String sectionRowStart = safeUpper(textOrNull(section, "rowLabelFrom"));
+        if (sectionRowStart == null || sectionRowStart.isBlank()) return false;
+
+        String sectionGrade = safeUpper(textOrNull(section, "grade"));
+        String sectionZone = safeUpper(textOrNull(section, "zone"));
+
+        boolean gradeMatch = normalizedGrade == null || normalizedGrade.isBlank() || normalizedGrade.equals(sectionGrade);
+        boolean zoneMatch = normalizedZone == null || normalizedZone.isBlank() || normalizedZone.equals(sectionZone);
+
+        return gradeMatch && zoneMatch;
+    }
+
+    private static boolean isSeatInSection(JsonNode section, String targetRow, String targetCol) {
+        int rows = section.path("rows").asInt(0);
+        int cols = section.path("cols").asInt(0);
+        int seatStart = section.path("seatStart").asInt(1);
+        String rowStart = safeUpper(textOrNull(section, "rowLabelFrom"));
+
+        for (int r = 0; r < rows; r++) {
+            String currentRow = incrementAlpha(rowStart, r);
+            if (!currentRow.equals(targetRow)) continue;
+
+            int colNum = Integer.parseInt(targetCol);
+            int minCol = seatStart;
+            int maxCol = seatStart + cols - 1;
+
+            // 숫자 범위만 비교하므로 내부 루프 제거 (복잡도 ↓)
+            return colNum >= minCol && colNum <= maxCol;
+        }
         return false;
     }
 
@@ -616,9 +687,8 @@ public class BookingService {
         }
 
         String normalizedGrade = grade.trim().toUpperCase();
-        java.util.Iterator<java.util.Map.Entry<String, JsonNode>> fields = pricingNode.fields();
-        while (fields.hasNext()) {
-            java.util.Map.Entry<String, JsonNode> entry = fields.next();
+
+        for (var entry : pricingNode.properties()) {
             if (normalizedGrade.equals(entry.getKey().trim().toUpperCase())) {
                 try {
                     return new BigDecimal(entry.getValue().asText());
@@ -627,6 +697,7 @@ public class BookingService {
                 }
             }
         }
+
         return null;
     }
 
